update lateMessageActivity set on item clicked

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="text_user_name">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/darkGray</item>
+        <item name="android:textSize">@dimen/text_title_name</item>
+    </style>
+
+    <style name="text_message">
+        <item name="android:textSize">@dimen/text_message</item>
+    </style>
+
 </resources>
