--- a/app/src/main/res/layout/row_latest_message.xml
+++ b/app/src/main/res/layout/row_latest_message.xml
@@ -7,14 +7,14 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/row_latest_message_imageview"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="2dp"
         android:padding="3dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_baseline_person_24"
         app:civ_border_color="#000"
         app:civ_border_width="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="TextView"
+        style="@style/text_user_name"
+        android:text="text"
         app:layout_constraintBottom_toTopOf="@+id/textView_latest_message"
         app:layout_constraintStart_toEndOf="@+id/row_latest_message_imageview"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="TextView"
+        style="@style/text_message"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
